header section complete and responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
         </div>
       </div>
     </nav>
+    <header>
+        <div class="header-content">
+            <div class="header-left">
+                <h2>Play Like The</h2>
+                <h1>G.O.A.T.</h1>
+                <p><i class="fa-regular fa-circle-play" style="color: #ff0000;"></i> 1-Click instant play</p>
+                <p><i class="fa-solid fa-download" style="color: #ff0000;"></i> No Download</p>
+                <p><i class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
+                <div>
+                    <button class="primary-btn">Sign Up</button>
+                    <button class="rogue-btn">Go Rogue</button>
+                </div>
+            </div>
+            <div class="header-right">
+                <img src="./images/Group 18.png" alt="">
+            </div>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
